--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -104,3 +104,48 @@
     margin-top: 40px;
     transition: 400ms;
 }
+
+#page-create-point form button:hover{
+    background: #2fb86e;
+}
+
+#page-create-point form .items-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 16px;
+}
+
+#page-create-point form .items-grid li {
+    background: #f5f5f5;
+    list-style: none;
+    height: 180px;
+    border: 2px solid #f5f5f5;
+    border-radius: 8px;
+    padding: 32px 24px 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
+
+}
+ 
+#page-create-point form .items-grid span {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    margin-top: 12px;
+    color: var(--tittle-color);
+}
+
+#page-create-point form .items-grid li.selected {
+    background: #e1faec;
+    border: 2px solid #34cb79;
+}
+
+#page-create-point form .items-grid span,
+#page-create-point form .items-grid img{
+    /* Remove evento de click dos elementos */
+    pointer-events: none;
+}
