--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,6 +1,6 @@
 #page-home {
     height: 100vh;
-    background: url('../img/home-background.svg') no-repeat;
+    background: url('../assets/img/home-background.svg') no-repeat;
     background-position: 35vw bottom;
 }
 
@@ -32,7 +32,7 @@
     height: 20px;
     width: 20px;
     display: flex;
-    background-image: url('../img/log-in.svg');
+    background-image: url('../assets/img/log-in.svg');
     margin-right: 16px;
 }
 
@@ -106,7 +106,7 @@
 
 #page-home main a span::after {
     content: "";
-    background: url('../img/search.svg');
+    background: url('../assets/img/search.svg');
     width: 20px;
     height: 20px;
 }
