--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -33,7 +33,7 @@
 }
 
 #modal .header a {
-    background: url("../img/x.svg");
+    background: url("../assets/img/x.svg");
     width: 20px;
     height: 20px;
     display: flex;
