--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -32,7 +32,7 @@ body::after {
 }
 
 #page-search-results header a span {
-    background: url('../img/arrow-left.svg');
+    background: url('../assets/img/arrow-left.svg');
     height: 24px;
     width: 24px;
     display: flex;
