--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -5,10 +5,12 @@
 {% endblock title %}
 {% block styles %}
     <link rel="stylesheet" href="styles/create-point.css">
+    <link rel="stylesheet" href="styles/modal.css">
 {% endblock styles %}
 {% block content %}
     {% include "partials/page-header.html" %}
-    <form action="">
+
+    <form action="/savepoint" method="POST">
         <h1>Cadastro do ponto de coleta</h1>
 
         <fieldset>
@@ -27,7 +29,7 @@
                     <input 
                     type="url" 
                     placeholder="http://"
-                    name="imagem" 
+                    name="image" 
                     required="required">
                 </div>
             </div>
@@ -69,32 +71,32 @@
             </legend>
 
             <div class="items-grid">
-                <li data-id="1">
+                <li data-id="Lâmpadas">
                     <img src="assets/img/lampadas.svg" alt="Lâmpadas">
                     <span>Lâmpadas</span>
                 </li>
 
-                <li data-id="2">
+                <li data-id="Pilhas e Baterias">
                     <img src="assets/img/baterias.svg" alt="Pilhas e Baterias">
                     <span>Pilhas e Baterias</span>
                 </li>
 
-                <li data-id="3">
-                    <img src="assets/img/papeis-papelao.svg" alt="Papéis e Papelãp">
-                    <span>Papéis e Papelãp</span>
+                <li data-id="Papéis e Papelão">
+                    <img src="assets/img/papeis-papelao.svg" alt="Papéis e Papelão">
+                    <span>Papéis e Papelão</span>
                 </li>
 
-                <li data-id="4">
+                <li data-id="Resíduos Eletrônicos">
                     <img src="assets/img/eletronicos.svg" alt="Resíduos Eletrônicos">
                     <span>Resíduos Eletrônicos</span>
                 </li>
 
-                <li data-id="5">
+                <li data-id="Resíduos Orgânicos">
                     <img src="assets/img/organicos.svg" alt="Resíduos Orgânicos">
                     <span>Resíduos Orgânicos</span>
                 </li>
 
-                <li data-id="6">
+                <li data-id="Óleo de cozinha">
                     <img src="assets/img/oleo.svg" alt="Óleo de cozinha">
                     <span>Óleo de cozinha</span>
                 </li>
@@ -108,6 +110,14 @@
         <button type="submit">Cadastrar ponto de coleta</button>
     </form>
 {% endblock content %}
+
+{% block modal %}
+{# so vai funcionar qnd for redirecionada atraves do post, debugar testando com get #}
+{% if saved %}
+    {% include "partials/point-created.html"%}
+{% endif %} 
+{% endblock modal %}
+
 {% block scripts %}
     <script src="scripts/create-point.js"></script>
 {% endblock scripts %}
